# multiregion-brain-model

./: README.md  pyproject.toml  test.py  train.py
Fig3_model/train_q=1/with_mlp_mlp_input_typesensory32/p/HaSH_original/no_sensory/seq20/maxTower5/fov5/RNN32/position_position_position_7_8_11/0.0005/M3_trial_2/800/: args.json  final_decision.pkl
Fig3_model/train_q=1/with_mlp_mlp_input_typesensory32/p/HaSH_original/no_sensory/seq20/maxTower5/fov5/RNN32/position_position_position_7_8_11/0.0005/M3_trial_3/800/: args.json  checkpoint.pth
Fig3_model/train_q=1/with_mlp_mlp_input_typesensory32/p/HaSH_star/no_sensory/seq20/maxTower5/fov5/RNN32/position_position_evidence_7_8_11/0.0005/M4_trial_1/800/: checkpoint.pth
Fig3_model/train_q=1/with_mlp_mlp_input_typesensory32/p/HaSH_star/no_sensory/seq20/maxTower5/fov5/RNN32/position_position_evidence_7_8_11/0.0005/M4_trial_2/800/: args.json  final_decision.pkl
Fig3_model/train_q=1/with_mlp_mlp_input_typesensory32/p/HaSH_star/no_sensory/seq20/maxTower5/fov5/RNN32/position_position_evidence_7_8_11/0.0005/M4_trial_3/800/: checkpoint.pth
analysis/: non_linear_reduction.py  plot_data_mat.py  plot_fig2.py
src/VectorHaSH/: base_wrapper.py  gridUtils.py  grid_2d_recurrence_wrapper.py  grid_2d_wrapper.py  grid_mlp_recurrence_wrapper.py  grid_mlp_wrapper.py
src/VectorHaSH/grid_cells/: assoc_utils_np.py  assoc_utils_np_2D.py  sensory_remap.py  surprisal.py  theory_utils.py
src/towertask/: config.py  data.py  env.py  model.py  utils.py
submit_jobs/: submit_all_models.sh  submit_plot_mat.sh
(+19 files in other folders)
